primo-brands-hydration-demo/salesforce/force-app/main/default/objects/CampaignMember/fields/Action_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Due_Date__c</fullName>
    <label>Action Due Date</label>
    <description>Deadline for taking action on this customer's pending item.</description>
    <type>DateTime</type>
</CustomField>