primo-brands-hydration-demo/salesforce/force-app/main/default/objects/CampaignMember/fields/Pending_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Pending_Action_Type__c</fullName>
    <label>Pending Action Type</label>
    <description>Type of action waiting for human decision.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve Draft</fullName>
            </value>
            <value>
                <fullName>Take Over</fullName>
            </value>
            <value>
                <fullName>Decision Needed</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>